--- a/apollo/frontend/templates/frontend/macros/participant_edit_form.html
+++ b/apollo/frontend/templates/frontend/macros/participant_edit_form.html
@@ -4,9 +4,9 @@
 {%- for field in form -%}
 {%- if field.type != 'CSRFTokenField' -%}
 <div class="form-group {% if field.errors %}has-error{% endif %}">
-    {{ field.label(class_='col-sm-3 control-label') }}
+    {{ field.label(class_='col-sm-3 col-sm-offset-1 control-label') }}
     <div class="col-sm-6">
-        {{ field(class_='form-control') }}
+        {{ field(class_='form-control span3') }}
         {% if field.errors %}
         {% for e in field.errors %}
         <p class="help-block">{{ e }}</p>
@@ -17,8 +17,8 @@
 {%- endif -%}
 {%- endfor -%}
 <div class="form-group">
-    <div class="col-sm-offset-3 col-sm-6">
-        <button class="btn btn-primary btn-lg" type="submit">Save</button>
+    <div class="col-sm-offset-4 col-sm-4">
+        <button class="btn btn-primary input-mini" type="submit">Save</button>
     </div>
 </div>
 </form>
