--- a/apollo/frontend/templates/frontend/participant_list.html
+++ b/apollo/frontend/templates/frontend/participant_list.html
@@ -52,6 +52,9 @@
                <th>{% trans %}Role{% endtrans %}</th>
                <th>{% trans %}Phone{% endtrans %}</th>
                <th>{% trans %}Organization{% endtrans %}</th>
+               {% for field in extra_fields %}
+               <th>{{ field.label }}</th>
+               {% endfor %}
                {%- if perms.edit_participant.can() -%}
                <th class="text-center">{% trans %}Edit{% endtrans %}</th>
                {%- endif -%}
@@ -71,6 +74,9 @@
                <td>{{ participant.role|default('N/A', true) }}</td>
                <td>{{ participant.phone|default('', true) }}</td>
                <td>{{ participant.partner|default('', true) }}</td>
+               {% for field in extra_fields %}
+               <td>{{ participant[field.name]|default('', true) }}</td>
+               {% endfor %}
                {%- if perms.edit_participant.can() -%}
                <td class="text-center"><a href="{{ url_for('participants.participant_edit', pk=participant.id) }}" data-toggle="modal" data-target="#edit_modal">{% trans %}Edit{% endtrans %}</a></td>
                {%- endif -%}
