--- a/apollo/frontend/static/css/apollo.css
+++ b/apollo/frontend/static/css/apollo.css
@@ -7249,6 +7249,7 @@ right: auto;
  -moz-border-radius:6px 0 0 6px;
  vertical-align:middle;
  height:35px;
+ top:12px;
  text-shadow: 1px 1px 2px rgba(0,0,0,0.25); 
  display: none;
 }
