Applied class for filter button width fix in locations list filter template

--- a/apollo/frontend/templates/frontend/macros/locations_list_filter.html
+++ b/apollo/frontend/templates/frontend/macros/locations_list_filter.html
@@ -1,5 +1,5 @@
 {% macro render_filter_form(form) %}
-<form class="form-inline">
+<form class="form-inline filter">
 <div class="form-group">
 {{ form.name(class_='form-control span3 input-sm', placeholder='Name') }}
 </div>
