--- a/apollo/frontend/templates/frontend/nu_checklist_summary.html
+++ b/apollo/frontend/templates/frontend/nu_checklist_summary.html
@@ -6,8 +6,8 @@
 	</div>
 	<div class="col-md-3">
 		<form class="form-inline pull-right" method="GET" accept-charset="utf-8">
-			<div class="form-group form-container">{{ filter_form.sample }}</div>
-			<button class="btn btn-warning" type="submit"><i class="glyphicon glyphicon-search"></i> {% trans %}Filter{% endtrans %}</button>
+			<div class="form-group form-container">{{ filter_form.sample(class_='form-control span2 input-sm') }}</div>
+			<button class="btn btn-warning btn-sm" type="submit"><i class="glyphicon glyphicon-search"></i> {% trans %}Filter{% endtrans %}</button>
 		</form>
 	</div>
 </div>
