--- a/apollo/frontend/templates/frontend/nu_critical_incident_summary.html
+++ b/apollo/frontend/templates/frontend/nu_critical_incident_summary.html
@@ -6,8 +6,8 @@
 	</div>
 	<div class="col-md-7">
 		<form class="form-inline pull-right">
-			<div class="form-group form-container">{{ filter_form.sample }} {{ filter_form.status }} {{ filter_form.witness }}</div>
-			<button class="btn btn-warning" type="submit"><i class="glyphicon glyphicon-search"></i> {% trans%}Filter{% endtrans %}</button>
+			<div class="form-group form-container">{{ filter_form.sample(class_='form-control span2 input-sm') }} {{ filter_form.status(class_='form-control span2 input-sm') }} {{ filter_form.witness(class_='form-control span2 input-sm') }}</div>
+			<button class="btn btn-sm btn-warning" type="submit"><i class="glyphicon glyphicon-search"></i> {% trans%}Filter{% endtrans %}</button>
 		</form>
 	</div>
 </div>
