renamed  field for incident forms

--- a/apollo/frontend/templates/frontend/nu_submission_edit.html
+++ b/apollo/frontend/templates/frontend/nu_submission_edit.html
@@ -144,7 +144,7 @@ TODO: insert location path here
     </tr>
     <tr>
       <td>{%- trans -%}Description{%- endtrans -%}</td>
-      <td colspan="2">{{ submission_form.incident_comment(cols=40, rows=5) }}</td>
+      <td colspan="2">{{ submission_form.description(cols=40, rows=5) }}</td>
     </tr>
     <tr>
       <td>{%- trans -%}Status{%- endtrans -%}</td>
