--- a/apollo/frontend/templates/frontend/login_user.html
+++ b/apollo/frontend/templates/frontend/login_user.html
@@ -24,6 +24,9 @@
           <div class="panel panel-default panel-login">
             <div class="panel-heading panel-heading-login">{% trans %}User Login{% endtrans %}</div>
             <div class="panel-body panel-login-body">
+              {% for msg in get_flashed_messages() %}
+              <div class="alert alert-info">{{ msg }}</div>
+              {% endfor %}
               <form name="login_user_form" class="form-vertical" action="{{ url_for_security('login') }}" method="POST" accept-charset="utf-8">{{ login_user_form.hidden_tag() }}
                 {% if login_user_form.errors %}
                 <div class="alert alert-danger">{% trans %}Your username and password <strong>did not match</strong>. Please try again.{% endtrans %}</div>
