--- a/apollo/frontend/templates/frontend/macros/participant_list_filter.html
+++ b/apollo/frontend/templates/frontend/macros/participant_list_filter.html
@@ -22,10 +22,10 @@
 {{ form.group(class_='select2-container span3 select2', style='height:26px', placeholder=_('All Groups')) }}
 </div>
 <div class="form-group">
-	<button class="btn btn-warning btn-sm" type="submit"><i class="glyphicon glyphicon-search"></i> Filter</button>
+	<button class="btn btn-warning btn-sm" type="submit"><i class="glyphicon glyphicon-search"></i> {% trans %}Filter{% endtrans %}</button>
 </div>
 <div class="form-group">
-	<a class="btn btn-default btn-sm" id="filter_reset">Clear</a>
+	<a class="btn btn-default btn-sm" id="filter_reset">{% trans %}Clear{% endtrans %}</a>
 </div>
 </form>
 {% endmacro %}
