--- a/apollo/frontend/templates/frontend/macros/submission_list_filter.html
+++ b/apollo/frontend/templates/frontend/macros/submission_list_filter.html
@@ -22,10 +22,10 @@
 </div>
 {%- endif -%}
 <div class="form-group">
-	<button class="btn btn-warning btn-sm btn-custom" type="submit"><i class="glyphicon glyphicon-search"></i> Filter</button>
+	<button class="btn btn-warning btn-sm btn-custom" type="submit"><i class="glyphicon glyphicon-search"></i> {% trans %}Filter{% endtrans %}</button>
 </div>
 <div class="form-group">
-    <a class="btn btn-default btn-sm" id="filter_reset">Clear</a>
+    <a class="btn btn-default btn-sm" id="filter_reset">{% trans %}Clear{% endtrans %}</a>
 </div>
 </form>
 {% endmacro %}
