bug fix with paginator

--- a/apollo/frontend/templates/frontend/macros/pagination.html
+++ b/apollo/frontend/templates/frontend/macros/pagination.html
@@ -1,13 +1,13 @@
 {% macro render_pager(pager, endpoint, args) %}
 <div class="text-center">
 <ul class="pagination pagination-centered">
-<li {% if pager.page == 1 %}class="disabled"{% endif %}><a title="{% trans %}First Page{% endtrans %}" href="{{ url_for(endpoint, page=1, **args) }}">&laquo;</a></li>
-<li {% if not pager.has_prev %}class="disabled"{% endif %}><a title="{% trans %}Previous Page{% endtrans %}" href="{{ url_for(endpoint, page=pager.prev_num, **args) }}">&larr;</a></li>
+<li {% if pager.page == 1 %}class="disabled"{% endif %}><a title="{% trans %}First Page{% endtrans %}" href="{% if pager.page == 1 %}javascript:;{% else %}{{ url_for(endpoint, page=1, **args) }}{% endif %}">&laquo;</a></li>
+<li {% if not pager.has_prev %}class="disabled"{% endif %}><a title="{% trans %}Previous Page{% endtrans %}" href="{% if not pager.has_prev %}javascript:;{% else %}{{ url_for(endpoint, page=pager.prev_num, **args) }}{% endif %}">&larr;</a></li>
 {% for pg in pager|pagelist %}
-<li {% if pg == pager.page %}class="active"{% endif %}><a href="{{ url_for(endpoint, page=pg, **args) }}">{{ pg }}</a></li>
+<li {% if pg == pager.page %}class="active"{% endif %}><a href="{% if pg == pager.page %}javascript:;{% else %}{{ url_for(endpoint, page=pg, **args) }}{% endif %}">{{ pg }}</a></li>
 {% endfor %}
-<li {% if not pager.has_next %}class="disabled"{% endif %}><a title="{% trans %}Next Page{% endtrans %}" href="{{ url_for(endpoint, page=pager.next_num, **args) }}">&rarr;</a></li>
-<li {% if pager.page == pager.pages or not pager.pages %}class="disabled"{% endif %}><a title="{% trans %}Last Page{% endtrans %}" href="{{ url_for(endpoint, page=pager.pages, **args) }}">&raquo;</a></li>
+<li {% if not pager.has_next %}class="disabled"{% endif %}><a title="{% trans %}Next Page{% endtrans %}" href="{% if not pager.has_next %}javascript:;{% else %}{{ url_for(endpoint, page=pager.next_num, **args) }}{% endif %}">&rarr;</a></li>
+<li {% if pager.page == pager.pages or not pager.pages %}class="disabled"{% endif %}><a title="{% trans %}Last Page{% endtrans %}" href="{% if pager.page == pager.pages or not pager.pages %}javascript:;{% else %}{{ url_for(endpoint, page=pager.pages, **args) }}{% endif %}">&raquo;</a></li>
 </ul>
 </div>
 {%- set start = (pager.page - 1) * pager.per_page + 1 -%}
