--- a/apollo/frontend/templates/frontend/macros/participant_list_filter.html
+++ b/apollo/frontend/templates/frontend/macros/participant_list_filter.html
@@ -1,31 +1,38 @@
 {% macro render_filter_form(form) %}
 <form class="form-inline">
-<div class="form-group">
-{{ form.participant_id(class_='form-control span3 input-sm', placeholder=_('Participant ID')) }}
+<div>
+    <div class="form-group">
+    {{ form.participant_id(class_='form-control span3 input-sm', placeholder=_('Participant ID')) }}
+    </div>
+    <div class="form-group">
+    {{ form.name(class_='form-control span3 input-sm', placeholder=_('Name')) }}
+    </div>
+    <div class="form-group">
+    {{ form.location(class_='select2-container span3 select2') }}
+    </div>
+    <div class="form-group">
+    {{ form.sample(class_='form-control span2 input-sm') }}
+    </div>
+    <div class="form-group">
+    {{ form.phone(class_='form-control span1 input-sm', placeholder=_('Phone')) }}
+    </div>
 </div>
-<div class="form-group">
-{{ form.name(class_='form-control span3 input-sm', placeholder=_('Name')) }}
-</div>
-<div class="form-group">
-{{ form.location(class_='select2-container span3 select2') }}
-</div>
-<div class="form-group">
-{{ form.sample(class_='form-control span2 input-sm') }}
-</div>
-<div class="form-group">
-{{ form.role(class_='form-control span3 input-sm') }}
-</div>
-<div class="form-group">
-{{ form.partner(class_='form-control span3 input-sm') }}
-</div>
-<div  class="form-group">
-{{ form.group(class_='select2-container span3 select2', style='height:26px', placeholder=_('All Groups')) }}
-</div>
-<div class="form-group">
-	<button class="btn btn-warning btn-sm" type="submit"><i class="glyphicon glyphicon-search"></i> {% trans %}Filter{% endtrans %}</button>
-</div>
-<div class="form-group">
-	<a class="btn btn-default btn-sm" id="filter_reset">{% trans %}Clear{% endtrans %}</a>
+<div>
+    <div class="form-group">
+    {{ form.role(class_='form-control span3 input-sm') }}
+    </div>
+    <div class="form-group">
+    {{ form.partner(class_='form-control span3 input-sm') }}
+    </div>
+    <div  class="form-group">
+    {{ form.group(class_='select2-container span3 select2', style='height:26px', placeholder=_('All Groups')) }}
+    </div>
+    <div class="form-group">
+    	<button class="btn btn-warning btn-sm" type="submit"><i class="glyphicon glyphicon-search"></i> {% trans %}Filter{% endtrans %}</button>
+    </div>
+    <div class="form-group">
+    	<a class="btn btn-default btn-sm" id="filter_reset">{% trans %}Clear{% endtrans %}</a>
+    </div>
 </div>
 </form>
 {% endmacro %}
