--- a/apollo/frontend/templates/frontend/_layout.html
+++ b/apollo/frontend/templates/frontend/_layout.html
@@ -86,6 +86,10 @@
                 <li><a href="{{ current_menu.submenu('events').url }}"><i class="glyphicon glyphicon-th-list"></i> {{ current_menu.submenu('events').text }}</a></li>
                 <li class="divider"></li>
               {%- endif -%}
+              {%- if perms.role('admin').can() -%}
+                <li><a href="{{ url_for('admin.index') }}"><i class="glyphicon glyphicon-user"></i> {% trans %}Admin{% endtrans %}</a></li>
+                <li class="divider"></li>
+              {%- endif -%}
               {%- if current_menu.submenu('locations_builder').visible -%}
                 <li><a href="{{ current_menu.submenu('locations_builder').url }}"><i class="glyphicon glyphicon-map-marker"></i> {{ current_menu.submenu('locations_builder').text }}</a></li>
               {%- endif -%}
