--- a/apollo/frontend/templates/frontend/incident_add.html
+++ b/apollo/frontend/templates/frontend/incident_add.html
@@ -71,6 +71,6 @@
 </div>
 {% endblock %}
 {% block scripts %}
-<script src="{{ url_for('static', filename='js/moment.min.js') }}"></script>
+<script src="{{ url_for('static', filename='js/moment-with-langs.min.js') }}"></script>
 <script src="{{ url_for('static', filename='js/timestamps.js') }}"></script>
 {% endblock %}
